Windows: fix DeferredDelete events processing on QThread::terminate()

On finishing/terminating a thread, when processing posted events,
we need to consider QThread's own data instead of caller thread's data.
Otherwise we can get into unexpected situations such as double
destruction of an object, premature destruction, etc.

Fixes: QTBUG-103922
Change-Id: Idf77221ebbaa0b150ee2d0c296b51829ae8dc30e
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 865212057b9f4e2809ebe42ec25c2d94d818cde7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>